# FourInRow

./: CMakeLists.txt  CMakePresets.json  FourInRow.cpp  FourInRow.h  README.md
